// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

package dataControllerUtils.protobuf;

message DcStatus {
extensions 5 to 102;
    enum TBD_STATUS {
        TBD_HEALTHY = 0;
        TBD_UNRESPONSIVE = 1;
        TBD_DEAD = 2;
    }

    required int32 dcQueriesDelay = 1;
    required TBD_STATUS tbdStatus = 2;
    optional int32 avrgTimeMsQuery = 3;
    optional int32 avrgTimeMsGetLast = 4;
}
